--- a/02mblog/mblog/templates/post.html
+++ b/02mblog/mblog/templates/post.html
@@ -10,7 +10,7 @@
 
     <div class="container mt-4">
         <h1 class="display-4">{{ post.title }}</h1>
-        <p class="lead">{{ post.body }}</p>
+        <p class="lead">{{ post.body | safe }}</p>
         <a href="/" class="btn btn-primary mt-3">回首頁</a>
     </div>
 
