--- a/02mblog/mblog/templates/disp.html
+++ b/02mblog/mblog/templates/disp.html
@@ -6,6 +6,22 @@
     <title>display product</title>
 </head>
 <body>
-    
+    <h2>{{ product.name }}</h2>
+    <hr>
+<table class="table table-bordered" bgcolor="lightblue" border="1">
+    <tr>
+        <td>name</td>
+        <td>{{ product.name }}</td>
+    </tr>
+    <tr>
+        <td>price</td>
+        <td>{{ product.price }}</td>
+    </tr>
+    <tr>
+        <td>qty</td>
+        <td>{{ product.qty }}</td>
+    </tr>
+</table>
+<a href="/list" class="btn btn-primary">回列表</a>
 </body>
 </html>
