templates DIR位置設定測試

--- a/02mblog/mblog/mysite/templates/index.html
+++ b/02mblog/mblog/mysite/templates/index.html
@@ -6,7 +6,7 @@
 {% block headmsg %}歡迎來到部落格-使用模板{% endblock %}
 
 {% block content %}
-<h3>在專案內的templates/index.html</h3>
+<h3>在@@APP@@內的mysite/templates/index.html</h3>
         {% for post in posts %}
             <div class="card mb-3">
                 <div class="card-body">
