--- a/09chart/chart/templates/header.html
+++ b/09chart/chart/templates/header.html
@@ -2,3 +2,7 @@
   <a class="nav-link" href="/votes/">投票</a>
   {% comment %} <a class="nav-link" href={% url 'votes' %}>投票</a> {% endcomment %}
 </li>
+<li class="nav-item">
+  <a class="nav-link" href="/plotly/">Plotly</a>
+  {% comment %} <a class="nav-link" href={% url 'plotly' %}>Plotly</a> {% endcomment %}
+</li>
