--- a/09chart/chart/templates/plotly.html
+++ b/09chart/chart/templates/plotly.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6" width="100%">
             {% autoescape off %}
             {{ plot_div }}
             {% endautoescape %}
