--- a/09chart/chart/templates/header.html
+++ b/09chart/chart/templates/header.html
@@ -6,3 +6,7 @@
   <a class="nav-link" href="/plotly/">Plotly</a>
   {% comment %} <a class="nav-link" href={% url 'plotly' %}>Plotly</a> {% endcomment %}
 </li>
+<li class="nav-item">
+  <a class="nav-link" href="/temp/">溫度</a>
+  {% comment %} <a class="nav-link" href={% url 'plotly' %}>Plotly</a> {% endcomment %}
+</li>
