--- a/09chart/chart/templates/temp.html
+++ b/09chart/chart/templates/temp.html
@@ -8,7 +8,7 @@
 {% endfor %}
     <div class='row'>
         <div class='col-md-12'>
-            <h3 class="alert alert-primary">temp from MQTT chart</h3>
+            <h3 class="alert alert-primary">溫度 from MQTT </h3>
         </div>
     </div>
     <div class="row">
