change folder name to regdemo

--- a/10reg/regdemo/templates/header.html
+++ b/10reg/regdemo/templates/header.html
@@ -1,4 +1,4 @@
-<!-- header.html (dj4ch10 project) -->
+<!-- header.html (regdemo project) -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">分享日記</a>
