--- a/10reg/regdemo/templates/registration/activate.html
+++ b/10reg/regdemo/templates/registration/activate.html
@@ -1,4 +1,4 @@
-<!-- activate.html (dj4ch10 project) -->
+<!-- activate.html (regdemo project) -->
 {% extends "base.html" %}
 {% block title %}分享日記{% endblock %}
 {% block content %}
