--- a/10reg/regdemo/templates/registration/registration_form.html
+++ b/10reg/regdemo/templates/registration/registration_form.html
@@ -1,4 +1,4 @@
-<!-- registration_form.html (dj4ch10 project) -->
+<!-- registration_form.html (regdemo project) -->
 {% extends "base.html" %}
 {% block title %}註冊分享日記{% endblock %}
 {% block content %}
