--- a/10reg/regdemo/templates/userinfo.html
+++ b/10reg/regdemo/templates/userinfo.html
@@ -1,4 +1,4 @@
-<!-- userinfo.html (dj4ch10 project) -->
+<!-- userinfo.html (regdemo project) -->
 {% extends "base.html" %}
 {% block title %}分享日記{% endblock %}
 {% block content %}
