--- a/10reg/regdemo/templates/registration/registration_complete.html
+++ b/10reg/regdemo/templates/registration/registration_complete.html
@@ -1,4 +1,4 @@
-<!-- registration_complete.html (dj4ch10 project) -->
+<!-- registration_complete.html (regdemo project) -->
 {% extends "base.html" %}
 {% block title %}分享日記{% endblock %}
 {% block content %}
