--- a/10reg/regdemo/templates/footer.html
+++ b/10reg/regdemo/templates/footer.html
@@ -2,4 +2,4 @@
 <hr>
 {% load static %}
 <img src="{% static "images/logo.png" %}" width=100>
-<em>Copyright 2023 <a href='https://104.es'>https://104.es</a>. All rights reserved.</em>
+<em>Copyright 2023 <a href='http://127.0.0.1:8000/'>回首頁</a>. All rights reserved.</em>
