--- a/10reg/regdemo/templates/header.html
+++ b/10reg/regdemo/templates/header.html
@@ -29,9 +29,15 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/accounts/register/">註冊</a>
+        </li>        
+        <li class="nav-item">
+          <a class="nav-link" href="/accounts/login/">all-auth登入</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin/login/?next=/">Django登入</a>
+          <a class="nav-link" href="/accounts/signup/">all-auth註冊</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/login/?next=/">Django登入後台</a>
         </li>
         {% endif %}
         <li class="nav-item">
