--- a/11mvote/mvote/mysite/templates/index.html
+++ b/11mvote/mvote/mysite/templates/index.html
@@ -1,7 +1,7 @@
 <!-- index.html (mvote project) -->
 {% extends "base.html" %}
 {% load mvote_extras %}
-{% block title %}投票趣{% endblock %}
+{% block title %}小電商{% endblock %}
 {% block content %}
     <div class='container'>
         {% for message in messages %}
@@ -10,9 +10,9 @@
 
         <div class='row'>
             <div class='col-md-12'>
-                <div class='panel panel-default'>
-                    <div class='panel-heading' align=center>
-                        <h3>歡迎光臨投票趣</h3>
+                <div class='card'>
+                    <div class='card-header' align=center>
+                        <h3>歡迎光臨小電商</h3>
                         {% if user.is_authenticated %}
                             {% if user.socialaccount_set.all.0.extra_data.name %}
                                 {{user.socialaccount_set.all.0.extra_data.name}}<br/>
@@ -21,7 +21,7 @@
                                 Welcome: {{ user.username }}
                             {% endif %}
                         {% else %}
-                            <p>歡迎使用Facebook註冊/登入你的帳號，以擁有投票和製作投票的功能。</p>
+                            <p>歡迎使用Facebook註冊/登入你的帳號，才能購買本站優惠商品（教學測試用）。</p>
                         {% endif %}
                     </div>
                 </div>
@@ -29,40 +29,54 @@
         </div>
 
         <div class='row'>
-            <button class='btn btn-info'>
-                目前是第{{ polls.number }}頁</a>
-            </button>
-            {% if polls.has_previous %}
-                <button class='btn btn-info'>
-                    <a href='?p={{ polls.previous_page_number }}'>上一頁</a>
-                </button>
-            {% endif %}
-            {% if polls.has_next %}
-                <button class='btn btn-info'>
-                    <a href='?p={{ polls.next_page_number }}'>下一頁</a>
-                </button>
-            {% endif %}
+            <div class='col-md-12'>
+                <div class='panel panel-default'>
+                    <div class='panel-heading' align=center>
+                        <h3>商品分類</h3>
+                    </div>
+                    <div class='panel-body'>
+                        <ul class='list-group'>
+                            {% for category in categories %}
+                                <li class='list-group-item'>
+                                    <a href='{% url "category-url" category.id %}'>{{ category.name }}</a>
+                                </li>
+                            {% empty %}
+                                <li class='list-group-item'>目前並沒有任何分類</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class='row'>
             {% load account %}
-            {% for poll in polls %}
-                {% if forloop.first %}
-                    <div class='list-group'>
-                {% endif %}
-                    <a href='{% url "poll-url" poll.id %}' class='list-group-item'>
-                        <span class='glyphicon glyphicon-check'></span>
-                        總票數：{{ poll.id | show_votes }}，
-                        項目數：{{ poll.id | show_items }}：
-                        {{ poll.name }}, added by 【{{poll.user}}】,
-                        created at {{poll.created_at}}
-                    </a>
-                {% if forloop.last %}
+            {% for product in products %}
+                <div class='col-xs-3 col-sm-3 col-md-3'>
+                    <div class='thumbnail'>
+                        <img src='{{product.image}}'>
+                            <p>{{ product.image }}</p>
+                        {% if product.image == None %}                            
+                            <p>沒有圖片</p>
+                        {% endif %}
+                        <div class='caption'>
+                            <h4><a href='{% url "product-url" product.id %}'>{{ product.name }}</a></h4>
+                            <p>NT$ {{product.price }}</p>
+                            <p>庫存：{{product.stock}}</p>
+                            <p>{{ product.description }}</p>
+                            {% if user.is_authenticated %}
+                                <button class='btn btn-info' {{ product.stock | yesno:",disabled"}}>
+                                    {% comment %} <a href='{% url "additem-url" product.id 1 %}'>放入購物車</a> {% endcomment %}
+                                </button>
+                            {% endif %}
+                        </div>    
                     </div>
-                {% endif %}
+                </div>
+                
             {% empty %}
-                <center><h3>目前並沒有活躍中的投票項目</h3></center>
+                <center><h3>目前並沒有任何商品</h3></center>
             {% endfor %}
         </div>
     </div>
 {% endblock %}
+
