--- a/11mvote/mvote/mysite/templates/header.html
+++ b/11mvote/mvote/mysite/templates/header.html
@@ -1,24 +1,41 @@
 <!-- header.html (mvote project) -->
-<nav class='navbar navbar-default'>
-    <div class='container-fluid'>
-        <div class='navbar-header'>
-            <div class='navbar-brand' align=center>
-                投票趣
-            </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">投票趣</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                {% if user.is_authenticated  %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/addpoll/">新增(編輯)投票</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account_reset_password' %}">重設密碼</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account_email' %}">變更電子郵件</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account_logout' %}">登出</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account_login' %}">登入</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account_signup' %}">註冊</a>
+                </li>
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/">後台管理</a>
+                </li>
+            </ul>
         </div>
-        {% load account %}
-        <ul class='nav navbar-nav'>
-            <li class='active'><a href='/'>Home</a></li>
-            {% if user.is_authenticated  %}
-            <li><a href="/addpoll/">新增(編輯)投票</a></li>
-            <li><a href="{% url 'account_reset_password' %}">重設密碼</a></li>
-            <li><a href="{% url 'account_email' %}">變更電子郵件</a></li>
-            <li><a href="{% url 'account_logout' %}">登出</a></li>
-            {% else %}
-            <li><a href="{% url 'account_login' %}">登入</a></li>
-            <li><a href="{% url 'account_signup' %}">註冊</a></li>
-            {% endif %}
-            <li><a href='/admin'>後台管理</a></li>
-        </ul>
     </div>
 </nav>
+
