--- a/11mvote/mvote/mysite/templates/index.html
+++ b/11mvote/mvote/mysite/templates/index.html
@@ -48,6 +48,29 @@
                 </div>
             </div>
         </div>
+<!--加入購物車訊息-->
+        <div class='row'>
+            <div class='col-md-10'>
+                {% if request.session.cart.items|length > 0 %} 
+                <p>目前購物車中共有 {{ request.session.cart.items | length }} 項產品</p>
+                {% else %}
+                <p>此購物車為空</p>
+                {% endif %}
+                
+            </div>
+            <div class='col-md-2'>
+                {% if user.is_authenticated %}
+                    {% if request.session.cart.items|length > 0 %} 
+                        <button class='btn btn-info' {{ product.stock | yesno:",disabled"}}>
+                            <a href='{% url "cart-detail" %}'>檢視購物車</a>
+                            {% comment %} <a href='{% url "additem-url" product.id 1 %}'>放入購物車</a> {% endcomment %}
+                        </button>
+                    {% endif %}
+                {% endif %}
+            </div>
+        </div>
+
+<!--加入購物車訊息-->
 
         <div class='row'>
             {% load account %}
@@ -68,7 +91,7 @@
                             <p>{{ product.description }}</p>
                             {% if user.is_authenticated %}
                                 <button class='btn btn-info' {{ product.stock | yesno:",disabled"}}>
-                                    {% comment %} <a href='{% url "additem-url" product.id 1 %}'>放入購物車</a> {% endcomment %}
+                                    <a href='{% url "additem-url" product.id 1 %}'>放入購物車</a>
                                 </button>
                             {% endif %}
                         </div>    
