--- a/11mvote/mvote/mysite/templates/cart.html
+++ b/11mvote/mvote/mysite/templates/cart.html
@@ -37,6 +37,7 @@
             </tr>
         </table>
         
+        <button class='btn btn-warning'><a href='/order'>我要訂購</a></button>
     </div>
 </div>
 {% endblock %}
