--- a/11mvote/mvote/mysite/templates/index.html
+++ b/11mvote/mvote/mysite/templates/index.html
@@ -61,9 +61,9 @@
             <div class='col-md-2'>
                 {% if user.is_authenticated %}
                     {% if request.session.cart.items|length > 0 %} 
-                        <button class='btn btn-info' {{ product.stock | yesno:",disabled"}}>
-                            <a href='{% url "cart-detail" %}'>檢視購物車</a>
-                            {% comment %} <a href='{% url "additem-url" product.id 1 %}'>放入購物車</a> {% endcomment %}
+                        <button class='btn btn-info'>
+                            <a href='/cart/'>檢視購物車</a>
+                            {% comment %} <a href='{% url "cart-detail" %}'>檢視購物車</a> {% endcomment %}
                         </button>
                     {% endif %}
                 {% endif %}
