--- a/06template/livetv/templates/index.html
+++ b/06template/livetv/templates/index.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>template demo</title>
-</head>
-<body>
-    <h1>This is Header message !!</h1>
-    <hr>
-    <h2>main content message is {{ msg }}</h2>
-    <hr>
-    <h4>This is Footer message !!</h4>
-    <h5>現在時刻： {{ now }}</h5>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block title %}
+    <title>template demo by block</title>
+{% endblock title %}
+
+{% block content %}
+    <h2>main content message is {{ msg }} by block</h2>
+{% endblock content %}
