--- a/06template/livetv/templates/index.html
+++ b/06template/livetv/templates/index.html
@@ -5,5 +5,8 @@
 {% endblock title %}
 
 {% block content %}
+<div class="container-fluid">
     <h2>main content message is {{ msg }} by block</h2>
+    
+</div>
 {% endblock content %}
