--- a/06template/livetv/templates/header.html
+++ b/06template/livetv/templates/header.html
@@ -8,7 +8,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarID">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    <a class="nav-link" href="{% url "tv-url" 0 %}">公視</a>
+                    <a class="nav-link" href="{% url "tv-url" 1 %}">非凡</a>
+                    <a class="nav-link" href="{% url "tv-url" 2 %}">民視</a>
+                    <a class="nav-link" href="{% url "tv-url" 3 %}">中視</a>
                     
                 </div>
             </div>
