--- a/06template/livetv/templates/engtv.html
+++ b/06template/livetv/templates/engtv.html
@@ -1,8 +1,14 @@
-{% extends "base.html" %}
+{% extends "base_tv.html" %}
 
 {% block title %}
     <title>英文電視台</title>
 {% endblock title %}
+
+{% block header %}
+    {% include "header_eng.html" %}
+{% endblock header %}
+
+
 
 {% block content %}
 <div class="container-fluid">
