--- a/07dborm/dborm/templates/header.html
+++ b/07dborm/dborm/templates/header.html
@@ -83,22 +83,22 @@
                                     </a>
                                 </li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li>
+                                {% comment %} <li>
                                     <a class="dropdown-item text-danger" href="{% url 'logout' %}">
                                         <i class="bi bi-box-arrow-right me-2"></i>登出
                                     </a>
-                                </li>
+                                </li> {% endcomment %}
                             </ul>
                         </div>
                     {% else %}
                         <!-- 未登入使用者 -->
                         <div class="d-flex gap-2">
-                            <a href="{% url 'login' %}" class="btn btn-outline-primary">
+                            {% comment %} <a href="{% url 'login' %}" class="btn btn-outline-primary">
                                 <i class="bi bi-box-arrow-in-right me-1"></i>登入
                             </a>
                             <a href="{% url 'register' %}" class="btn btn-primary">
                                 <i class="bi bi-person-plus me-1"></i>註冊
-                            </a>
+                            </a> {% endcomment %}
                         </div>
                     {% endif %}
                 </div>
