--- a/07dborm/dborm/templates/header.html
+++ b/07dborm/dborm/templates/header.html
@@ -22,11 +22,12 @@
                             <i class="bi bi-house-door me-1"></i>首頁
                         </a>
                     </li>
-                    {% comment %} <li class="nav-item">
-                        <a class="nav-link" href="{% url 'about' %}">
-                            <i class="bi bi-info-circle me-1"></i>關於我們
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin">
+                            <i class="bi bi-info-circle me-1"></i>管理後台
                         </a>
                     </li>
+                    {% comment %} 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" 
                            data-bs-toggle="dropdown" aria-expanded="false">
@@ -117,6 +118,7 @@
                         <a href="{% url 'home' %}" class="text-decoration-none">
                             <i class="bi bi-house-door"></i> 首頁
                         </a>
+                        
                     </li>
                     {% for crumb in breadcrumb %}
                         {% if forloop.last %}
