加入刪除留言功能

--- a/08form/mood/templates/base.html
+++ b/08form/mood/templates/base.html
@@ -181,7 +181,13 @@
             });
         });
 
-
+        function go_delete(id) {
+            var user_pass = document.getElementById('user_pass').value;
+            if (user_pass != "") {
+                var usr = '/delpost/' + id + '/' + user_pass + '/';
+                window.location = usr;
+            }
+        }
     </script>
 </body>
 </html>
