--- a/08form/mood/templates/index_post.html
+++ b/08form/mood/templates/index_post.html
@@ -2,7 +2,7 @@
 {% block title %}心情留言板{% endblock %}
 {% block content %}
 <div class='container' align=center>
-    {% if error %}
+    {% if message %}
     <div class='alert alert-danger'>
         {{ message }}<br><br>
     </div>
