--- a/08form/mood/templates/contact.html
+++ b/08form/mood/templates/contact.html
@@ -6,9 +6,10 @@
 
 {% block content %}
     <div class="container">
-        {% if message %}
-            <div class="alert alert-warning">{{ message }}</div>
+        {% if messages %}
+            <div class="alert alert-warning">{{ messages }}</div>
         {% endif %}
+
         {{ user_name }} {{ user_city }} {{ user_school }} {{ user_email }}<br>
         {{ user_message | linebreaks }}
         
