--- a/08form/mood/templates/header.html
+++ b/08form/mood/templates/header.html
@@ -23,6 +23,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/post2db/">
+                            <i class="bi bi-info-circle me-1"></i>張貼訊息
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/admin">
                             <i class="bi bi-info-circle me-1"></i>管理後台
                         </a>
