--- a/09chart/chart/templates/index.html
+++ b/09chart/chart/templates/index.html
@@ -3,9 +3,9 @@
 {% block title %}分享日記{% endblock %}
 {% block content %}
 <div class='container'>
-{% for message in messages %}
-    <div class='alert alert-{{message.tags}}'>{{ message }}</div>
-{% endfor %}
+{% if message %}
+    <div class='alert alert-danger'>{{ message }}</div>
+{% endif %}
     <div class='row'>
         <div class='col-md-12'>
                     <h3 class="alert alert-primary">{{ username | default:"我"}}的私人日記</h3>
