--- a/09chart/chart/templates/login.html
+++ b/09chart/chart/templates/login.html
@@ -3,15 +3,18 @@
 {% block title %}登入分享日記{% endblock %}
 {% block content %}
 <div class='container'>
-{% if message %}
+{% comment %} {% if message %}
     <div class='alert alert-danger'>{{ message }}</div>
-{% endif %}
+{% endif %} {% endcomment %}
+{% for message in messages %}
+    <div class='alert alert-{{message.tags}}'>{{ message }}</div>
+{% endfor %}
     <div class='row'>
         <div class='col-md-12'>
                     <h3 class="alert alert-primary">{{ username | default:"登入我"}}的私人日記</h3>
         </div>
     </div>
-    
+
     <form action='.' method='POST'>
         {% csrf_token %}
             <table>
