--- a/09chart/chart/templates/header.html
+++ b/09chart/chart/templates/header.html
@@ -32,6 +32,11 @@
                             <i class="bi bi-info-circle me-1"></i>管理後台
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/votes">
+                            <i class="bi bi-info-circle me-1"></i>得票資訊
+                        </a>
+                    </li>
                     {% comment %} 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" 
