--- a/09chart/chart/templates/header.html
+++ b/09chart/chart/templates/header.html
@@ -22,11 +22,11 @@
                             <i class="bi bi-house-door me-1"></i>首頁
                         </a>
                     </li>
-                    <li class="nav-item">
+                    {% comment %} <li class="nav-item">
                         <a class="nav-link" href="/post2db/">
                             <i class="bi bi-info-circle me-1"></i>張貼訊息
                         </a>
-                    </li>
+                    </li> {% endcomment %}
                     <li class="nav-item">
                         <a class="nav-link" href="/admin">
                             <i class="bi bi-info-circle me-1"></i>管理後台
@@ -34,7 +34,22 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/votes">
-                            <i class="bi bi-info-circle me-1"></i>得票資訊
+                            <i class="bi bi-info-circle me-1"></i>得票資訊JS
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/plotly">
+                            <i class="bi bi-info-circle me-1"></i>得票資訊PLOT
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/temp">
+                            <i class="bi bi-info-circle me-1"></i>溫度資訊
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/mqtt">
+                            <i class="bi bi-info-circle me-1"></i>MQTT接收傳送
                         </a>
                     </li>
                     {% comment %} 
