使用django auth機制來做登入驗證

--- a/09chart/chart/templates/userinfo.html
+++ b/09chart/chart/templates/userinfo.html
@@ -13,6 +13,7 @@
     </div>
     {% if userinfo %}
     您的姓名:{{ userinfo.name }}<br/>
+    您的姓名 by auth:{{ userinfo.username }}<br/>
     電子郵件:{{ userinfo.email }}
     {% endif %}
     
